--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "electron-builder": "^22.10.5",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "spectron": "^14.0.0",
     "supertest": "^6.1.3",
     "wait-on": "^5.3.0"
